# Libraries

./: .gitgnore  .gitignore
c-data-structures/: CMakeLists.txt
c-data-structures/include/: graph.h  list.h  stack.h  vector.h
c-data-structures/src/: graph.c  list.c  stack.c  vector.c
c-data-structures/test/: main.c
